{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 19,
  "lineage": "4ef0f2bb-238a-c62f-85c7-93bb4f2258a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee22cd298a5ca102",
            "arn": "arn:aws:ec2:us-east-1:034841271118:elastic-ip/eipalloc-0ee22cd298a5ca102",
            "association_id": "eipassoc-0f47bfd509f1f7632",
            "domain": "vpc",
            "id": "eipalloc-0ee22cd298a5ca102",
            "instance": "i-0a3dde4838a61ad32",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bcc45f05bbb65118",
            "private_dns": "ip-10-0-1-58.ec2.internal",
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-3-94-236-192.compute-1.amazonaws.com",
            "public_ip": "3.94.236.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mon-ecommerce-eip",
              "Project": "mon-ecommerce"
            },
            "tags_all": {
              "Name": "mon-ecommerce-eip",
              "Project": "mon-ecommerce"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ecr_repository.backend",
            "aws_ecr_repository.frontend",
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_instance.main",
            "aws_key_pair.main",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d05471b100e9083f",
            "arn": "arn:aws:ec2:us-east-1:034841271118:instance/i-0a3dde4838a61ad32",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mon-ecommerce-ec2-profile",
            "id": "i-0a3dde4838a61ad32",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mon-ecommerce-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bcc45f05bbb65118",
            "private_dns": "ip-10-0-1-58.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-3-238-18-143.compute-1.amazonaws.com",
            "public_ip": "3.238.18.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e05ee072c9eb356",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cf7a3d5c2c6dfcb6",
            "tags": {
              "Name": "mon-ecommerce-ec2",
              "Project": "mon-ecommerce"
            },
            "tags_all": {
              "Name": "mon-ecommerce-ec2",
              "Project": "mon-ecommerce"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0198cb793035ff7c9"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ecr_repository.backend",
            "aws_ecr_repository.frontend",
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_key_pair.main",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034841271118:internet-gateway/igw-07ad1b1a4e2940d3e",
            "id": "igw-07ad1b1a4e2940d3e",
            "owner_id": "034841271118",
            "tags": {
              "Name": "mon-ecommerce-igw",
              "Project": "mon-ecommerce"
            },
            "tags_all": {
              "Name": "mon-ecommerce-igw",
              "Project": "mon-ecommerce"
            },
            "vpc_id": "vpc-0abbb011293fc5473"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034841271118:route-table/rtb-066c4675e1f2d8a4e",
            "id": "rtb-066c4675e1f2d8a4e",
            "owner_id": "034841271118",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ad1b1a4e2940d3e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mon-ecommerce-public-rt",
              "Project": "mon-ecommerce"
            },
            "tags_all": {
              "Name": "mon-ecommerce-public-rt",
              "Project": "mon-ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abbb011293fc5473"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01abd974ac8970ae0",
            "route_table_id": "rtb-066c4675e1f2d8a4e",
            "subnet_id": "subnet-0cf7a3d5c2c6dfcb6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0322ac07bc5288411",
            "route_table_id": "rtb-066c4675e1f2d8a4e",
            "subnet_id": "subnet-08e0d0e8011c3ccca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034841271118:security-group/sg-0198cb793035ff7c9",
            "description": "Security group pour EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0198cb793035ff7c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mon-ecommerce-ec2-sg",
            "name_prefix": "",
            "owner_id": "034841271118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mon-ecommerce-ec2-sg",
              "Project": "mon-ecommerce"
            },
            "tags_all": {
              "Name": "mon-ecommerce-ec2-sg",
              "Project": "mon-ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abbb011293fc5473"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034841271118:subnet/subnet-05474a571a68db8a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05474a571a68db8a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "034841271118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mon-ecommerce-private-1",
              "Project": "mon-ecommerce"
            },
            "tags_all": {
              "Name": "mon-ecommerce-private-1",
              "Project": "mon-ecommerce"
            },
            "vpc_id": "vpc-0abbb011293fc5473"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034841271118:subnet/subnet-06fdb1959a5461732",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fdb1959a5461732",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "034841271118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mon-ecommerce-private-2",
              "Project": "mon-ecommerce"
            },
            "tags_all": {
              "Name": "mon-ecommerce-private-2",
              "Project": "mon-ecommerce"
            },
            "vpc_id": "vpc-0abbb011293fc5473"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034841271118:subnet/subnet-0cf7a3d5c2c6dfcb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf7a3d5c2c6dfcb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034841271118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mon-ecommerce-public-1",
              "Project": "mon-ecommerce"
            },
            "tags_all": {
              "Name": "mon-ecommerce-public-1",
              "Project": "mon-ecommerce"
            },
            "vpc_id": "vpc-0abbb011293fc5473"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034841271118:subnet/subnet-08e0d0e8011c3ccca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e0d0e8011c3ccca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034841271118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mon-ecommerce-public-2",
              "Project": "mon-ecommerce"
            },
            "tags_all": {
              "Name": "mon-ecommerce-public-2",
              "Project": "mon-ecommerce"
            },
            "vpc_id": "vpc-0abbb011293fc5473"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034841271118:vpc/vpc-0abbb011293fc5473",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-053a1c8864a1eba76",
            "default_route_table_id": "rtb-050f947b204ce7b82",
            "default_security_group_id": "sg-08803b5bfc6c1b03c",
            "dhcp_options_id": "dopt-00f3235c31c1407c0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0abbb011293fc5473",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-050f947b204ce7b82",
            "owner_id": "034841271118",
            "tags": {
              "Name": "mon-ecommerce-vpc",
              "Project": "mon-ecommerce"
            },
            "tags_all": {
              "Name": "mon-ecommerce-vpc",
              "Project": "mon-ecommerce"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}